maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: error: not found: value x
    keepHandOnSideWall(x)
                       ^WallFollowerMaze:27: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^