maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall(x)
  }
  prendBiscuit()
}

def keepHandOnSideWall(x : Int) {
  if (murcote()){
    if (!estFaceMur())
    	avance()
    else if (x==0)
    	droite()
    else
    	gauche()
    
  }
 
  
}



def murcote() : Boolean = {

    if (estFaceMur())
    	droite()
    else {
    	gauche()
    	if (estFaceMur()){
      	droite()
      	return true
    	}
    	else {
      	droite()
      	return false
    	}
    }
  
  
}